fix: :lipstick: Styles update
Cambio en la interfaz.

--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,9 @@ main {
 }
 
 main article {
-    width: calc(33.3333% - 5px);
-    margin-bottom: 25px;
+    width: calc(25% - 10px);
+    margin-bottom: 10px;
+    padding: 10px;
     border-radius: 3px;
     overflow: hidden;
     background: #f1f3f4;
@@ -48,7 +49,7 @@ main article {
 
 main article img {
     width: 100%;
-    height: 250px;
+    height: auto;
     object-fit: cover;
 }
 
@@ -66,7 +67,7 @@ main article audio {
     width: 100%;
     text-align: center;
     padding: 20px;
-    background-color: #fff; 
+    background-color: #fff;
     margin: 20px 0;
 }
 
